--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,13 @@
     "@types/node": "^16.18.24",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
+    "install": "^0.13.0",
+    "npm": "^9.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -77,9 +81,12 @@
     "@storybook/react": "^7.0.6",
     "@storybook/react-webpack5": "^7.0.6",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "autoprefixer": "^10.4.14",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "postcss": "^8.4.23",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.6",
+    "tailwindcss": "^3.3.1",
     "webpack": "^5.80.0"
   }
 }
