--- a/client/package.json
+++ b/client/package.json
@@ -81,6 +81,7 @@
     "@storybook/react": "^7.0.6",
     "@storybook/react-webpack5": "^7.0.6",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.14",
     "babel-plugin-named-exports-order": "^0.0.2",
     "postcss": "^8.4.23",
